--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -2,12 +2,8 @@ version: "3"
 
 services:
   elasticsearch:
-    image: elasticsearch:5.6
-    container_name: elasticsearch
-    environment:
-      - cluster.name=docker-cluster
-      - bootstrap.memory_lock=true
-      - "ES_JAVA_OPTS=-Xms512m -Xmx512m"
+    image: elasticsearch:2.4-alpine
+    container_name: appenlight_elasticsearch_24
     ulimits:
       memlock:
         soft: -1
@@ -19,7 +15,7 @@ services:
 
   postgres:
     image: postgres
-    container_name: postgres
+    container_name: appenlight_postgres
     environment:
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: changeme
@@ -30,7 +26,7 @@ services:
     restart: unless-stopped
   pgadmin:
     image: fenglc/pgadmin4
-    container_name: pgadmin
+    container_name: appenlight_pgadmin
     links:
       - postgres:postgres
     ports:
@@ -41,6 +37,7 @@ services:
 
   redis:
     image: bitnami/redis:4.0-ol-7
+    container_name: appenlight_redis
     environment:
       - ALLOW_EMPTY_PASSWORD=yes
     ports:
